--- a/app/layouts/app.jl.html
+++ b/app/layouts/app.jl.html
@@ -19,10 +19,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.3/css/theme.default.min.css" integrity="sha512-wghhOJkjQX0Lh3NSWvNKeZ0ZpNn+SPVXX1Qyc9OCaogADktxrBiBdKGDoqVUOyhStvMBmJQ8ZdMHiR3wuEq8+w==" crossorigin="anonymous" />
     <!-- tables : end -->
     <!-- msa : start -->
-    <script src="js/msa.min.js"></script>
+    <script src="/ThorAxe/js/msa.min.js"></script>
     <!-- msa : end -->
-    <script src="js/thoraxeresults.js"></script>
-    <link rel="stylesheet" href="css/thoraxeresults.css">
+    <script src="/ThorAxe/js/thoraxeresults.js"></script>
+    <link rel="stylesheet" href="/ThorAxe/css/thoraxeresults.css">
   </head>
   <body>
     <div class="jumbotron">
