--- a/app/resources/thoraxeresults/views/thoraxeresult.jl.html
+++ b/app/resources/thoraxeresults/views/thoraxeresult.jl.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col"></div>
     <div class="col">
-      <form id="geneSelectorForm" action="/" method="GET">
+      <form id="geneSelectorForm" action="/ThorAxe" method="GET">
         <div class="form-group">
           <label for="geneName">Gene Name:</label>
           <input type="text" class="form-control" name="name" id="geneName" list="geneList" aria-describedby="geneHelp" 
@@ -96,7 +96,7 @@
   </div>
 </div>
 
-<img src="img/loading.gif" id="loadingImage">
+<img src="/ThorAxe/img/loading.gif" id="loadingImage">
 
 <% if selected != "" %>
 <script>
