--- a/app/layouts/app.jl.html
+++ b/app/layouts/app.jl.html
@@ -42,5 +42,14 @@
       <%
         @yield
       %>
+    <footer class="footer">
+      <div class="container">
+        <span class="text-muted">
+          Zea, D. J., Laskina, S., Richard, H., & Laine, E. (2020). 
+          <em>Assessing Conservation of Alternative Splicing with Evolutionary Splicing Graphs. </em> 
+          <a href="https://doi.org/10.1101/2020.11.14.382820">BioRxiv.</a>
+        </span>
+      </div>
+    </footer>
   </body>
 </html>
