--- a/public/ThorAxe/css/thoraxeresults.css
+++ b/public/ThorAxe/css/thoraxeresults.css
@@ -34,3 +34,24 @@ tbody tr.alt-row td {
   overflow: auto;
 }
 /* msa : end */
+
+/* sticky footer : start */
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 80px; /* Margin bottom by footer height: 60 + 20 */
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #e9ecef;
+  text-align: center;
+}
+/* sticky footer : end */
