--- a/public/ThorAxe/css/thoraxeresults.css
+++ b/public/ThorAxe/css/thoraxeresults.css
@@ -36,21 +36,21 @@ tbody tr.alt-row td {
 /* msa : end */
 
 /* sticky footer : start */
-html {
-  position: relative;
-  min-height: 100%;
+.page {
+  min-height:100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-body {
-  margin-bottom: 80px; /* Margin bottom by footer height: 60 + 20 */
+.content {
+  flex: 1;
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
+  font-size: small;
+  margin-top: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   background-color: #e9ecef;
   text-align: center;
 }
