Add link to ThorAxe

--- a/app/resources/thoraxeresults/views/thoraxeresult.jl.html
+++ b/app/resources/thoraxeresults/views/thoraxeresult.jl.html
@@ -12,7 +12,7 @@
             <p>Write the name of a human gene from the publication.</p> 
             <p>Cannot find your favorite gene in the list? Please contact us at 
               <a href="mailto: massiv.lcqb@gmail.com">massiv.lcqb@gmail.com</a> 
-              and we will be happy to help!</p>
+              and we will be happy to help or give <a href="https://github.com/PhyloSofS-Team/thoraxe">the tool</a> a try!</p>
           </small>
           <datalist id="geneList">
             <% @foreach(keys(results)) do gene %>
