--- a/app/layouts/app.jl.html
+++ b/app/layouts/app.jl.html
@@ -39,20 +39,22 @@
   </head>
   <body>
     <div class="page">
-      <div class="content">
+      <div class="header">
         <div class="jumbotron">
           <a href="/ThorAxe" class="text-dark no_text_decoration">
            <h1 class="display-4">ThorAxe</h1>
            <p class="lead">Supplementary Material</p>
           </a>
         </div>
+      </div>
+      <div class="content">
         <%
             @yield
         %>
       </div>
       <div class="footer">
           <span class="footer-text text-muted">
-            Zea, D. J., Laskina, S., Richard, H., & Laine, E. (2020). 
+            Zea, D. J., Laskina, S., Baudin, A., Richard, H., & Laine, E. (2020). 
             <em>Assessing Conservation of Alternative Splicing with Evolutionary Splicing Graphs. </em> 
             <a href="https://doi.org/10.1101/2020.11.14.382820">BioRxiv.</a>
           </span>
