--- a/app/layouts/app.jl.html
+++ b/app/layouts/app.jl.html
@@ -34,6 +34,10 @@
     <!-- msa : start -->
     <script src="/ThorAxe/js/msa.min.js"></script>
     <!-- msa : end -->
+    <!-- gene_structure : start -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js" integrity="sha512-FHsFVKQ/T1KWJDGSbrUhTJyS1ph3eRrxI228ND0EGaEp6v4a/vGwPWd3Dtd/+9cI7ccofZvl/wulICEurHN1pg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js" integrity="sha512-wNH6xsp2n8CfB91nrBtfc4sfLwYPBMjSWVUwQOp60AYYXH6i8yCwuKFZ4rgK2i6pQek/b+bSyR7b01/922IBzQ==" crossorigin="anonymous"></script>
+    <!-- gene-structure : end -->
     <script src="/ThorAxe/js/thoraxeresults.js"></script>
     <link rel="stylesheet" href="/ThorAxe/css/thoraxeresults.css">
   </head>
